--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
         sudo apt-get install -y \
           gcc \
           gcc-aarch64-linux-gnu \
-          gcc-aarch64-none-elf \
           bc \
           bison \
           build-essential \
@@ -57,6 +56,13 @@ jobs:
           python3-venv \
           swig \
           uuid-dev
+
+    - name: Install AArch64 Toolchain
+      run: |
+        wget https://developer.arm.com/-/media/Files/downloads/gnu/14.3.rel1/binrel/arm-gnu-toolchain-14.3.rel1-x86_64-aarch64-none-elf.tar.xz
+        sudo mkdir -p /opt/toolchains
+        sudo tar xf arm-gnu-toolchain-14.3.rel1-x86_64-aarch64-none-elf.tar.xz -C /opt/toolchains
+        echo "/opt/toolchains/arm-gnu-toolchain-14.3.rel1-x86_64-aarch64-none-elf/bin" >> $GITHUB_PATH
 
     - name: Build U-Boot
       working-directory: u-boot
