chore(ci): Add debug step to list FIP boards
The build-fip.sh script is failing with an "Invalid board name" error.

This commit adds a step to the workflow to list the contents of the amlogic-boot-fip directory. This will allow us to see the valid board names that the script expects.

The signing step has been temporarily disabled to allow the workflow to complete and show the debug output.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,10 +78,14 @@ jobs:
         path: amlogic-boot-fip
         depth: 1
 
+    - name: List available boards
+      run: ls -l amlogic-boot-fip
+
     - name: Sign U-Boot
       run: |
-        mkdir -p signed-fip
-        ./amlogic-boot-fip/build-fip.sh u200 ${{ github.workspace }}/u-boot/u-boot.bin signed-fip
+        # mkdir -p signed-fip
+        # ./amlogic-boot-fip/build-fip.sh u200 ${{ github.workspace }}/u-boot/u-boot.bin signed-fip
+        echo "Skipping signing to investigate board name"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
